--- a/style.css
+++ b/style.css
@@ -6,355 +6,651 @@
 5. Otros
  */
 
- :root{
-     /* Colores */
-     --bitcoin-orange: #f7931A;
-     --soft-orange: #FFE9D5;
-     --secondary-blue: #1A9AF7;
-     --soft-blue: #e7f5ff;
-     --warm-black: #201e1c;
-     --black: #282623;
-     --grey:#BABABA;
-     --off-white: #FAF8F7;
-     --just-white: #FFFFFF;
- }
-
- *{
-     padding: 0;
-     margin: 0;
-     box-sizing: border-box;
- }
-
- html{
-     font-size: 62.5%;
-     font-family: 'DM Sans', sans-serif;    
- }
-
-header{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    /* El width no se va a hacer mas pequeño que 320px */
-    min-width: 320px;
-    height: 334px;
-    text-align: center;
-    background: linear-gradient(207.8deg, #201E1C 16.69%, #F7931A 100%);;
+:root {
+  /* Colores */
+  --bitcoin-orange: #f7931a;
+  --soft-orange: #ffe9d5;
+  --secondary-blue: #1a9af7;
+  --soft-blue: #e7f5ff;
+  --warm-black: #201e1c;
+  --black: #282623;
+  --grey: #bababa;
+  --off-white: #faf8f7;
+  --just-white: #ffffff;
 }
 
-header img{
-    width: 150px;
-    height: 24px;
-    margin-top: 60px;
-    align-self: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.header--title-container{
-    width: 90%;
-    /* Siempre va a estar utilizando un width siempre de 90% que este entre 288px y 900px */
-    min-height: 288px;
-    max-width: 900px;
-    height: 218px;
-    margin-top: 40px;
-    text-align: center;
-    align-self: center;
+html {
+  font-size: 62.5%;
+  font-family: "DM Sans", sans-serif;
+  scroll-behavior: smooth;
 }
 
-.header--title-container h1{
-    font-size: 2.4rem;
-    font-weight: bold;
-    line-height: 2.6rem;
-    color: var(--just-white);
+header {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  /* El width no se va a hacer mas pequeño que 320px */
+  min-width: 320px;
+  height: 334px;
+  text-align: center;
+  background: linear-gradient(207.8deg, #201e1c 16.69%, #f7931a 100%);
 }
 
-.header--title-container p{
-    margin-top: 2.5rem;
-    font-size: 1.4rem;
-    font-weight: 500;
-    line-height: 1.8rem;
-    color: var(--soft-orange);
+header img {
+  width: 150px;
+  height: 24px;
+  margin-top: 60px;
+  align-self: center;
 }
 
-.header--title-container .header--button{
-    position: absolute;
-    /* Nos ayuda a generar un calculo para que se vaya al centro al 50% */
-    left: calc(50% - 118px);
-    top: 270px;
-    display: block;
-    margin-top: 35px;
-    padding: 15px;
-    width: 229px;
-    height: 48px;
-    background-color: var(--off-white);
-    /* Sombra */
-    box-shadow: 0px 4px 8px rgba(89,73,30,0.16) ;
-    border: none;
-    border-radius: 5px;
-    font-size: 1.4rem;
-    font-weight:bold;
-    text-decoration: none;
-    color: var(--black);
+.header--title-container {
+  width: 90%;
+  /* Siempre va a estar utilizando un width siempre de 90% que este entre 288px y 900px */
+  min-height: 288px;
+  max-width: 900px;
+  height: 218px;
+  margin-top: 40px;
+  text-align: center;
+  align-self: center;
 }
 
-.header--button span{
-    display: inline-block;
-    width:13px;
-    height:8px;
-    margin-left: 10px;
-    background-image: url('./assets/icons/down-arrow.svg')
-
+.header--title-container h1 {
+  font-size: 2.4rem;
+  font-weight: bold;
+  line-height: 2.6rem;
+  color: var(--just-white);
 }
 
-main{
-    width: 100%;
-    height: auto;
-    background-color: var(--off-white);
+.header--title-container p {
+  margin-top: 2.5rem;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  color: var(--soft-orange);
 }
 
-.main-exchange-container{
-    width: 100%;
-    height: auto;
-    padding-top: 80px;
-    padding-bottom: 30px;
-    text-align: center;
+.header--title-container .header--button {
+  position: absolute;
+  /* Nos ayuda a generar un calculo para que se vaya al centro al 50% */
+  left: calc(50% - 118px);
+  top: 270px;
+  display: block;
+  margin-top: 35px;
+  padding: 15px;
+  width: 229px;
+  height: 48px;
+  background-color: var(--off-white);
+  /* Sombra */
+  box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
+  border: none;
+  border-radius: 5px;
+  font-size: 1.4rem;
+  font-weight: bold;
+  text-decoration: none;
+  color: var(--black);
 }
 
-.main-exchange-container--title{
-    width: 90%;
-    min-width: 288px;
-    max-width: 900px;
-    margin: 0 auto;
+.header--button span {
+  display: inline-block;
+  width: 13px;
+  height: 8px;
+  margin-left: 10px;
+  background-image: url("./assets/icons/down-arrow.svg");
 }
 
-.main-exchange-container .backgroundImg{
-    width: 200px;
-    height: 200px;
-    margin: 0 auto;
-    margin-bottom: 50px;
-    background-image: url("./assets/imgs/Bitcoin.svg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+main {
+  width: 100%;
+  height: auto;
+  background-color: var(--off-white);
 }
 
-.main-exchange-container h2{
-    margin-bottom: 30px;
-    font-size: 2.4rem;
-    font-weight:bold;
-    line-height:2.6rem;
-    color: var(--black);
+.main-exchange-container {
+  width: 100%;
+  height: auto;
+  padding-top: 80px;
+  padding-bottom: 30px;
+  text-align: center;
 }
 
-.main-exchange-container p{
-    margin-bottom: 30px;
-    font-size: 1.4rem;
-    font-weight: 500;
-    line-height: 1.6rem;
-    color: #757575;
+.main-exchange-container--title {
+  width: 90%;
+  min-width: 288px;
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.main-exchange-container .backgroundImg {
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+  margin-bottom: 50px;
+  background-image: url("./assets/imgs/Bitcoin.svg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.main-exchange-container h2 {
+  margin-bottom: 30px;
+  font-size: 2.4rem;
+  font-weight: bold;
+  line-height: 2.6rem;
+  color: var(--black);
+}
+
+.main-exchange-container p {
+  margin-bottom: 30px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.6rem;
+  color: #757575;
 }
 
 .main-currency-table {
+  width: 70%;
+  min-width: 235px;
+  max-width: 500px;
+  height: 360px;
+  margin: 0 auto;
+  font-family: "Inter", sans-serif;
+}
+
+.main-comisions-table {
     width: 70%;
     min-width: 235px;
     max-width: 500px;
     height: 360px;
     margin: 0 auto;
     font-family: "Inter", sans-serif;
+  }
 
+
+.main-currency-table .currency-table--title {
+  margin-bottom: 15px;
+  font-size: 1.8rem;
+  font-weight: bold;
+  line-height: 2.3rem;
+  color: var(--bitcoin-orange);
+
+  margin-left: 10px;
 }
 
-.main-currency-table .currency-table--title{
+.main-comisions-table .comisions-table--title {
     margin-bottom: 15px;
     font-size: 1.8rem;
     font-weight: bold;
     line-height: 2.3rem;
-    color: var(--bitcoin-orange);   
+    color: var(--secondary-blue);  
+    margin-left: 10px;
+  }
+.currency-table--container {
+  width: 90%;
+  min-width: 230px;
+  max-width: 300px;
+  height: 250px;
+  margin: 0 auto;
+  align-items: center;
 }
 
-.currency-table--container{
+.currency-table--container table {
+  width: 100%;
+  height: 100%;
+}
+
+.currency-table--container td {
+  width: 50%;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 1.9rem;
+  color: var(--grey);
+  background-color: var(--just-white);
+}
+
+.currency-table--container .table__top-left {
+  border-radius: 15px 0 0 0;
+}
+
+.currency-table--container .table__top-right {
+  border-radius: 0 15px 0 0;
+}
+.currency-table--container .table__bottom-left {
+  border-radius: 0 0 0 15px;
+}
+
+.currency-table--container .table__bottom-right {
+  border-radius: 0 0 15px 0;
+}
+.currency-table--container .table__right {
+  font-size: 1.4rem;
+  font-weight: normal;
+  line-height: 1.7rem;
+  color: #757575;
+}
+
+.currency-table--container .down {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin-left: 10px;
+  background-image: url("./assets/icons/trending-down.svg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.currency-table--container .up {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  margin-left: 10px;
+  background-image: url("./assets/icons/trending-up.svg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.currency-table--container {
+  width: 90%;
+  min-width: 230px;
+  max-width: 300px;
+  height: 250px;
+  margin: 0 auto;
+  align-items: center;
+}
+
+.currency-table--container table {
+  width: 100%;
+  height: 100%;
+}
+
+.currency-table--container td {
+  width: 50%;
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 1.9rem;
+  color: var(--grey);
+  background-color: var(--just-white);
+}
+
+.currency-table--container .table__top-left {
+  border-radius: 15px 0 0 0;
+}
+
+.currency-table--container .table__top-right {
+  border-radius: 0 15px 0 0;
+}
+.currency-table--container .table__bottom-left {
+  border-radius: 0 0 0 15px;
+}
+
+.currency-table--container .table__bottom-right {
+  border-radius: 0 0 15px 0;
+}
+.currency-table--container .table__right {
+  font-size: 1.4rem;
+  font-weight: normal;
+  line-height: 1.7rem;
+  color: #757575;
+}
+
+/* COMISIONS */
+.comisions-table--container {
     width: 90%;
     min-width: 230px;
     max-width: 300px;
     height: 250px;
     margin: 0 auto;
     align-items: center;
-}
-
-.currency-table--container table{
+  }
+  
+  .comisions-table--container table {
     width: 100%;
     height: 100%;
-}
-
-.currency-table--container td{
+  }
+  
+  .comisions-table--container td {
     width: 50%;
     font-size: 1.6rem;
     font-weight: 500;
     line-height: 1.9rem;
     color: var(--grey);
-    background-color:  var(--just-white);
-
-}
-
-.currency-table--container .table__top-left{
+    background-color: var(--just-white);
+  }
+  
+  .comisions-table--container .table__top-left {
     border-radius: 15px 0 0 0;
-    
-}
-
-.currency-table--container .table__top-right{
+  }
+  
+  .comisions-table--container .table__top-right {
     border-radius: 0 15px 0 0;
-}
-.currency-table--container .table__bottom-left{
+  }
+  .comisions-table--container .table__bottom-left {
     border-radius: 0 0 0 15px;
-}
-
-.currency-table--container .table__bottom-right{
-    border-radius:0 0 15px 0;
-}
-.currency-table--container .table__right{
+  }
+  
+  .comisions-table--container .table__bottom-right {
+    border-radius: 0 0 15px 0;
+  }
+  .comisions-table--container .table__right {
     font-size: 1.4rem;
     font-weight: normal;
     line-height: 1.7rem;
     color: #757575;
+  }
+.currency-table--date {
+  width: 190px;
+  height: 30px;
+  margin: 0 auto;
+  margin-top: 15px;
+  padding: 8px;
+  background-color: var(--soft-orange);
+  border-radius: 8px;
 }
 
-.currency-table--container .down{
-    display: inline-block;
-    width: 15px;
-    height: 15px;
-    margin-left: 10px;
-    background-image: url("./assets/icons/trending-down.svg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.currency-table--container .up{
-    display: inline-block;
-    width: 15px;
-    height: 15px;
-    margin-left: 10px;
-    background-image: url("./assets/icons/trending-up.svg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.currency-table--date{
+.currency-table--date2{
     width: 190px;
     height: 30px;
     margin: 0 auto;
     margin-top: 15px;
     padding: 8px;
-    background-color: var(--soft-orange);
+    background-color: var(--soft-blue);
     border-radius: 8px;
 }
 
-.currency-table--date p{
-    
-    font-size: 1.2rem;
-    line-height: 1.5rem;
-    color: var(--warm-black);
-    font-weight: 300;
+.currency-table--date p {
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  color: var(--warm-black);
+  font-weight: 300;
 }
+
+.currency-table--date2 p{
+    font-size: 1.2rem;
+  line-height: 1.5rem;
+  color: var(--warm-black);
+  font-weight: 300;
+} 
 
 .main-product-detail {
-    position: relative;
-    width: 100%;
-    min-width: 320px;
-    height: auto;
-    padding: 20px 10px;
-    background-color: var(--warm-black);
+  position: relative;
+  width: 100%;
+  min-width: 320px;
+  height: auto;
+  padding: 20px 10px;
+  background-color: var(--warm-black);
 }
 
-.main-product-detail .product-detail--batata-logo{
-    width: 40px;
-    height: 25px;
-    position: absolute;
-    top: calc(0% - 12.5px);
-    left: calc(50% - 20px);
-    background-image: url("./assets/icons/batata.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    display: inline-block;   
+.main-product-detail .product-detail--batata-logo {
+  width: 40px;
+  height: 25px;
+  position: absolute;
+  top: calc(0% - 12.5px);
+  left: calc(50% - 20px);
+  background-image: url("./assets/icons/batata.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: inline-block;
 }
 
-.product-detail--title{
-    text-align: center;
-    width: 90%;
-    min-width: 288px;
-    height: auto;
-    margin: 0 auto;
-    margin-top: 50px;
+.product-detail--title {
+  text-align: center;
+  width: 90%;
+  min-width: 288px;
+  height: auto;
+  margin: 0 auto;
+  margin-top: 50px;
 }
 
-.product-detail--title h2{
-    margin-bottom: 20px;
-    color: var(--just-white);
-    font-weight: bold;
-    font-size:2.4rem;
-    Line-height: 2.6rem;
+.product-detail--title h2 {
+  margin-bottom: 20px;
+  color: var(--just-white);
+  font-weight: bold;
+  font-size: 2.4rem;
+  line-height: 2.6rem;
 }
 
-
-.product-detail--title p{
-    color: #808080;
-    font-size: 1.4rem;
-    line-height: 1.8rem;
-    font-weight: 500;
-    margin-bottom: 20px;
+.product-detail--title p {
+  color: #808080;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  font-weight: 500;
+  margin-bottom: 20px;
 }
 
-.product-detail--card{
-    width: 90%;
-    min-width: 288px;
-    max-width: 400px;
-    height: 152px;
-    margin: 15px auto;
-    background-color: var(--black);
-    border-radius: 5px;
-    padding: 15px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.16);
+.product-detail--card {
+  width: 90%;
+  min-width: 288px;
+  max-width: 400px;
+  min-height: 152px;
+  margin: 15px auto;
+  background-color: var(--black);
+  border-radius: 5px;
+  padding: 18px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
 }
 
-.product-detail--card .icon-card{
-    display: inline-block;
-    width: 25px;
-    height: 25px;
-    margin-bottom: 10px;
-    
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+.product-detail--card .icon-card {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  margin-bottom: 10px;
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
-.clock{
-    background-image: url("./assets/icons/clock.svg");
+.clock {
+  background-image: url("./assets/icons/clock.svg");
 }
 
-.eye{
-    background-image: url("./assets/icons/eye.svg") ;
+.eye {
+  background-image: url("./assets/icons/eye.svg");
 }
 
-.dollar{
-    background-image: url("./assets/icons/dollar-sign.svg");
+.dollar {
+  background-image: url("./assets/icons/dollar-sign.svg");
 }
 
-.check{
-    background-image: url("./assets/icons/check-circle.svg");
+.check {
+  background-image: url("./assets/icons/check-circle.svg");
 }
-.product-detail--card .product--card-tile{
-    margin-bottom: 12px;
-    color: var(--just-white);
-    font-size: 1.8rem;
-    line-height: 1.8rem;
-    font-weight:bold;
+.product-detail--card .product--card-tile {
+  margin-bottom: 12px;
+  color: var(--just-white);
+  font-size: 1.8rem;
+  line-height: 1.8rem;
+  font-weight: bold;
 }
 
-.product-detail--card .product--card-body{
-    color: #808080;
-    font-size: 1.4rem;
-    line-height: 1.8rem;
-    font-weight: 500;
+.product-detail--card .product--card-body {
+  color: #808080;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  font-weight: 500;
 }
+
+.bitcoin-img-container {
+  width: 100%;
+  min-width: 320px;
+  height: 30vh;
+  background-image: url("./assets/imgs/bitcoinbaby2x.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+
+.bitcoin-img-container h2 {
+  color: var(--just-white);
+  font-size: 2.4rem;
+  line-height: 2.6rem;
+
+  font-weight: bold;
+  padding-top: 60px;
+}
+
+.main-plans-container {
+  width: 100%;
+  min-width: 320px;
+  padding-bottom: 70px;
+  text-align: center;
+}
+
+.plans--title {
+  width: 90%;
+  min-width: 288px;
+  height: auto;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+
+.plans--title h2 {
+  padding-top: 50px;
+  font-size: 2.4rem;
+  font-weight: bold;
+  line-height: 2.6rem;
+  color: var(--black);
+}
+
+.plans--title p {
+  padding-top: 30px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  color: #757575;
+}
+
+.plans-container--card {
+  position: relative;
+  width: 70%;
+  min-width: 190px;
+  max-width: 300px;
+  height: 250px;
+  margin: 50px auto 0;
+  padding: 0 15px;
+  /* Esto nos ayuda a que centre el elemento que estamos viendo */
+  scroll-snap-align: center;
+  background-color: var(--just-white);
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(89, 73, 30, 0.16);
+}
+
+.recomendado {
+  position: absolute;
+  width: 120px;
+  height: 31px;
+  padding: 6px;
+  left: calc(50% - 60px);
+  top: -15px;
+  font-size: 1.2rem;
+  background-color: var(--bitcoin-orange);
+  border-radius: 8px;
+  color: var(--just-white);
+
+  font-weight: bold;
+}
+
+.plan-card--title {
+  padding-top: 30px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  color: #000000;
+}
+
+.plan-card--price {
+  padding: 5px 0;
+  font-size: 5.2rem;
+  font-weight: bold;
+  line-height: 6.3rem;
+  color: black;
+  position: relative;
+}
+
+.plan-card--price span {
+  position: absolute;
+  top: -7px;
+  left: calc(50% - 40px);
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+
+.plan-card--saving {
+  color: #757575;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+.plan-card--call {
+  width: 150px;
+  height: 48px;
+  margin-top: 20px;
+  background-color: #faf8f7;
+  border: 2px solid var(--bitcoin-orange);
+  border-radius: 5px;
+  font-size: 1.4rem;
+  font-weight: bold;
+  line-height: 1.8rem;
+  color: black;
+  font-family: "DM Sans", sans-serif;
+}
+
+.plan-card--call span {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  vertical-align: text-bottom;
+  background-image: url("./assets/icons/orange-right-arrow.svg");
+}
+
+.plans-container--slider {
+  display: flex;
+  gap: 10px;
+  height: 316px;
+  overflow-x: scroll;
+  overscroll-behavior-x: contain;
+  /* Esto nos ayuda a que centre el elemento que estamos viendo */
+  scroll-snap-type: x proximity;
+}
+
+footer {
+  display: flex;
+  width: 100%;
+  height: 150px;
+  background-color: var(--bitcoin-orange);
+}
+
+footer section {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .left-footer ul {
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  list-style: none;
+  color: white;
+}
+
+footer .left-footer li {
+  margin: 10px 0;
+}
+
+.left-footer a {
+  text-decoration: none;
+  color: white;
+}
+
